--- a/kantonsvergleich_einbaucode.html
+++ b/kantonsvergleich_einbaucode.html
@@ -44,6 +44,8 @@
 							<li><a href="javascript:;" class="selection" id="15-01">Bildungsstand</a></li>
 							<li><a href="javascript:;" class="selection" id="15-02">Maturitätsquote</a></li>
 							<li><a href="javascript:;" class="selection" id="15-03">Hochschuleinstrittsquote</a></li>
+							<li><a href="javascript:;" class="selection" id="15-04">Studienerfolgsquote</a></li>
+							<li><a href="javascript:;" class="selection" id="15-05">Hochschulabschlussquote</a></li>
 						</ul>
 					</li>
 					<li>
